// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a table with data and style prop 1`] = `
WordDocument {
  "doc": officegen {
    "_events": Object {
      "afterGen": [Function],
      "beforeGen": [Function],
      "clearData": [Function],
      "clearDoc": [Function],
      "clearDocType": [Function],
    },
    "_eventsCount": 5,
    "_maxListeners": undefined,
    "addPageBreak": [Function],
    "addResourceToParse": [Function],
    "cbMakeDocxDocument": [Function],
    "createByJson": [Function],
    "createJson": [Function],
    "createListOfDots": [Function],
    "createListOfNumbers": [Function],
    "createP": [Function],
    "createTable": [Function],
    "data": Array [],
    "domain": null,
    "generate": [Function],
    "getFooter": [Function],
    "getHeader": [Function],
    "info": Object {
      "cp:category": Object {
        "data": "",
        "def_data": "",
        "element": "cp:category",
      },
      "cp:contentStatus": Object {
        "data": "",
        "def_data": "",
        "element": "cp:contentStatus",
      },
      "cp:keywords": Object {
        "data": "",
        "def_data": "",
        "element": "cp:keywords",
      },
      "dc:description": Object {
        "data": "",
        "def_data": "",
        "element": "dc:description",
      },
      "dc:subject": Object {
        "data": "",
        "def_data": "",
        "element": "dc:subject",
      },
      "dc:title": Object {
        "data": "",
        "def_data": "",
        "element": "dc:title",
      },
    },
    "options": Object {
      "type": "docx",
    },
    "putPageBreak": [Function],
    "setDescription": [Function],
    "setDocCategory": [Function],
    "setDocKeywords": [Function],
    "setDocStatus": [Function],
    "setDocSubject": [Function],
    "setDocTitle": [Function],
    "setTheme": [Function],
    "startNewDoc": [Function],
    "theme": null,
  },
  "document": Table {
    "TABLE_DATA": Array [],
    "defaultStyles": Object {
      "borders": true,
      "tableAlign": "left",
      "tableColWidth": 2500,
      "tableColor": "black",
      "tableSize": 24,
    },
    "props": Object {
      "data": Array [
        Array [
          "iPhone 7",
          "128GB",
        ],
        Array [
          "iPhone 5SE",
          "64GB",
        ],
      ],
      "headers": Array [
        Object {
          "styles": Object {
            "bold": true,
            "color": "red",
            "size": 10,
          },
          "value": "Phone",
        },
        Object {
          "styles": Object {
            "bold": true,
            "color": "blue",
            "size": 10,
          },
          "value": "Capacity",
        },
      ],
    },
    "root": [Circular],
  },
}
`;

exports[`should render a table with some data 1`] = `
WordDocument {
  "doc": officegen {
    "_events": Object {
      "afterGen": [Function],
      "beforeGen": [Function],
      "clearData": [Function],
      "clearDoc": [Function],
      "clearDocType": [Function],
    },
    "_eventsCount": 5,
    "_maxListeners": undefined,
    "addPageBreak": [Function],
    "addResourceToParse": [Function],
    "cbMakeDocxDocument": [Function],
    "createByJson": [Function],
    "createJson": [Function],
    "createListOfDots": [Function],
    "createListOfNumbers": [Function],
    "createP": [Function],
    "createTable": [Function],
    "data": Array [],
    "domain": null,
    "generate": [Function],
    "getFooter": [Function],
    "getHeader": [Function],
    "info": Object {
      "cp:category": Object {
        "data": "",
        "def_data": "",
        "element": "cp:category",
      },
      "cp:contentStatus": Object {
        "data": "",
        "def_data": "",
        "element": "cp:contentStatus",
      },
      "cp:keywords": Object {
        "data": "",
        "def_data": "",
        "element": "cp:keywords",
      },
      "dc:description": Object {
        "data": "",
        "def_data": "",
        "element": "dc:description",
      },
      "dc:subject": Object {
        "data": "",
        "def_data": "",
        "element": "dc:subject",
      },
      "dc:title": Object {
        "data": "",
        "def_data": "",
        "element": "dc:title",
      },
    },
    "options": Object {
      "type": "docx",
    },
    "putPageBreak": [Function],
    "setDescription": [Function],
    "setDocCategory": [Function],
    "setDocKeywords": [Function],
    "setDocStatus": [Function],
    "setDocSubject": [Function],
    "setDocTitle": [Function],
    "setTheme": [Function],
    "startNewDoc": [Function],
    "theme": null,
  },
  "document": Table {
    "TABLE_DATA": Array [],
    "defaultStyles": Object {
      "borders": true,
      "tableAlign": "left",
      "tableColWidth": 2500,
      "tableColor": "black",
      "tableSize": 24,
    },
    "props": Object {
      "data": Array [
        Array [
          "Nitin",
        ],
      ],
      "headers": Array [
        Object {
          "styles": Object {
            "color": "red",
          },
          "value": "Name",
        },
      ],
    },
    "root": [Circular],
  },
}
`;

exports[`should render a table with table style prop 1`] = `
WordDocument {
  "doc": officegen {
    "_events": Object {
      "afterGen": [Function],
      "beforeGen": [Function],
      "clearData": [Function],
      "clearDoc": [Function],
      "clearDocType": [Function],
    },
    "_eventsCount": 5,
    "_maxListeners": undefined,
    "addPageBreak": [Function],
    "addResourceToParse": [Function],
    "cbMakeDocxDocument": [Function],
    "createByJson": [Function],
    "createJson": [Function],
    "createListOfDots": [Function],
    "createListOfNumbers": [Function],
    "createP": [Function],
    "createTable": [Function],
    "data": Array [],
    "domain": null,
    "generate": [Function],
    "getFooter": [Function],
    "getHeader": [Function],
    "info": Object {
      "cp:category": Object {
        "data": "",
        "def_data": "",
        "element": "cp:category",
      },
      "cp:contentStatus": Object {
        "data": "",
        "def_data": "",
        "element": "cp:contentStatus",
      },
      "cp:keywords": Object {
        "data": "",
        "def_data": "",
        "element": "cp:keywords",
      },
      "dc:description": Object {
        "data": "",
        "def_data": "",
        "element": "dc:description",
      },
      "dc:subject": Object {
        "data": "",
        "def_data": "",
        "element": "dc:subject",
      },
      "dc:title": Object {
        "data": "",
        "def_data": "",
        "element": "dc:title",
      },
    },
    "options": Object {
      "type": "docx",
    },
    "putPageBreak": [Function],
    "setDescription": [Function],
    "setDocCategory": [Function],
    "setDocKeywords": [Function],
    "setDocStatus": [Function],
    "setDocSubject": [Function],
    "setDocTitle": [Function],
    "setTheme": [Function],
    "startNewDoc": [Function],
    "theme": null,
  },
  "document": Table {
    "TABLE_DATA": Array [],
    "defaultStyles": Object {
      "borders": true,
      "tableAlign": "left",
      "tableColWidth": 2500,
      "tableColor": "black",
      "tableSize": 24,
    },
    "props": Object {
      "data": Array [
        Array [
          "iPhone 7",
          "128GB",
        ],
        Array [
          "iPhone 5SE",
          "64GB",
        ],
      ],
      "headers": Array [
        Object {
          "styles": Object {
            "bold": true,
            "color": "red",
            "size": 10,
          },
          "value": "Phone",
        },
        Object {
          "styles": Object {
            "bold": true,
            "color": "blue",
            "size": 10,
          },
          "value": "Capacity",
        },
      ],
      "style": Object {
        "borders": true,
        "tableAlign": "center",
        "tableColWidth": 4261,
        "tableColor": "red",
        "tableSize": 24,
      },
    },
    "root": [Circular],
  },
}
`;
